correction in css body overflow

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ html, body {
 
 body {
     font-size: 1.6rem;
-    overflow: auto;
+    overflow: scroll;
 }
 
 header {
